# image_manipulation

./: Cargo.toml  README.md  index.html  shell.nix
src/: context.rs  image_display.rs  index.html  input.rs  lib.rs  main.rs  mod.js  pipelines.rs  shader.wgsl  stages.rs  texture.rs  thread_context.rs  vertex.rs  viewport.rs  window.rs
src/shader/: for_loop.wgsl  gamma_correction.wgsl  gamma_lookup.wgsl  interpolation.wgsl  kernel.wgsl  min_max.wgsl  normalize.wgsl  output.wgsl  pad.wgsl  reduction.wgsl
