[package]
name = "cs256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
winit = "0.28"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0.75"
wgpu = "0.18"