[package]
name = "cs256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
winit = "0.28"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0.75"
wgpu = "0.18"
image = "0.24.8"
cfg-if = "1.0.0"
egui_wgpu_backend = "0.27.0"
egui = "0.23.0"
egui_winit_platform = "0.20.0"
egui_demo_lib = "0.23.0"
instant = "0.1.12"
